Fix several issues in last commit - Update system use header actual height instead of predicted values - Add CSS styling to remove default hyperlink format from cards when viewed in some browsers - Fix bug in CSS causing page to exceed mobile phone screen width - Adjust header buttons to fit on one line on mobile screens - Add missing links to contact section - And several other minor bug fixes

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   --background: #fefefe;
   --background-lighter: #F0A8C7;
   --text: #000;
-  --card-text: #fff;
+  --header-footer-text: #fff;
   --card-accent: #D1236F;
   --pink: #FCEEF4;
 }
@@ -14,6 +14,7 @@
   flex-wrap: nowrap;
   min-height: 100%;
   min-width: 100%;
+  max-width: 100%;
   color: var(--text);
 }
 
@@ -23,40 +24,45 @@ html {
 
 header {
   background: linear-gradient(20deg,rgba(202, 43, 112, 1) 0%, rgba(185, 50, 84, 1) 45%, rgba(143, 14, 14, 1) 100%);
-  color: var(--card-text);
+  color: var(--header-footer-text);
   position: fixed;
   width: 100%;
   top: 0;
   left: 0;
   text-align: center;
-  transition: 0.5s ease-in-out;
+  transition: 0.2s ease-in-out;
 }
 
 header .container {
-  width: 100%;
-  transition: 0.5s ease-in-out;
+  width: 100vw;
 }
 
-header .container ul {
-  align-items: center;
-  list-style-type: none;
+header .container h1 {
+  font-size: 32px;
+  margin-bottom: 0;
+}
+
+header .container .subheading {
+  font-size: x-large;
+  font-weight: 200;
+  padding: 0 0 20px;
+  margin-top: 0;
+}
+
+header .container .buttons {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 0;
+  justify-content: stretch;
+  margin: auto;
+  max-width: min(800px, 100%);
+  padding: 20px 0 0;
 }
 
-header .container ul .button {
-  margin: 0 minmax(5px, auto);
+header .container .button {
   background-color: transparent;
+  flex: 1;
+  padding: 5px;
   font-size: large;
-  transition: 0.5 ease-in-out;
-}
-
-header .container h1,
-header .container h2 {
-  transition: 0.5 ease-in-out;
 }
 
 .button {
@@ -64,47 +70,37 @@ header .container h2 {
   font-family: inherit;
   padding: 10px 20px;
   border-radius: 5px;
-  color: #fff;
-  transition: 0.5 ease-in-out;
+  color: white;
+  transition: border 0.2s ease-in-out;
 }
 
 .button:hover {
   border: 1px solid var(--background-lighter);
-  transition: 0.2s ease-in-out;
   cursor: pointer
 }
 
 .button:focus-visible {
-  outline: 2px solid #fff;
-}
-
-h1, h2 {
-  transition: 0.5s ease-in-out;
-  font-size: "xx-large";
-}
-
-.subheading {
-  font-weight: 200;
+  outline: 2px solid white;
 }
 
 main {
-  justify-items: center;
-  margin: 0 auto;
-  min-width: 400px;
   transition: 0.5s ease-in-out;
+  max-width: 100vw;
+  margin: 0 10px;
 }
 
 main p {
   text-align: left;
+  max-width: 100%;
 }
 
 main section {
-  max-width: min(100vh, 1200px);
-  padding: 0 20px;
+  margin: 0 auto;
+  max-width: 100%;
+  width: min(95%, 1200px);
 }
 
 main h2 {
-  transition: 0.5s ease-in-out;
   text-align: center;
   font-weight: 100;
   padding-top: 40px;
@@ -113,8 +109,9 @@ main h2 {
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
   align-items: stretch;
+  max-width: 100%;
 }
 
 .card-container .card {
@@ -126,6 +123,8 @@ main h2 {
   padding: 20px;
   text-align: left;
   transition: background-color 0.2s ease-in-out;
+  text-decoration: none;
+  color: black;
 }
 
 .card-container .card:hover {
@@ -134,11 +133,11 @@ main h2 {
 }
 
 .card-container .card:focus-visible {
-  border: 2px solid #000;
+  border: 2px solid black;
 }
 
 .card-container .card h3 {
-  margin: 10px 0 0;
+  margin: 0;
   font-size: large;
   color: var(--card-accent);
 }
@@ -152,18 +151,19 @@ main h2 {
 
 .card-container .card p {
   font-size: medium;
+  padding: 0;
+  margin: 5px 0 0;
 }
 
 .contact-container {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding-top: 20px;
 }
 
 .contact-container button {
   font-family: inherit;
-  padding: 10px;
+  padding: 30px 10px 10px;
   border: none;
   background-color: var(--background);
 }
@@ -171,6 +171,8 @@ main h2 {
 .contact-container button p {
   text-align: center;
   font-size: medium;
+  text-decoration: none;
+  color: var(--text);
 }
 
 .contact-container button:hover {
@@ -183,13 +185,15 @@ main h2 {
 
 .modal {
   display: none;
-  position: fixed; 
+  position: fixed !important; 
   z-index: 1; 
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  background-color: rgb(0,0,0);
+  width: 100%;
+  height: 120%; 
+  /* ^ This needs to be <100% because on some mobile browsers the bit at the 
+  top with the web address shrinks when you scroll the page, affecting the 
+  total page height*/
   background-color: rgba(0,0,0,0.4);
 }
 
@@ -218,7 +222,7 @@ footer {
   margin-top: 70px;
   padding: 60px;
   background-color: #333;
-  color: var(--card-text);
+  color: var(--header-footer-text);
 }
 
 footer .container {
@@ -228,7 +232,7 @@ footer .container {
 }
 
 footer a {
-  color: #fff
+  color: white;
 }
 
 footer .container {
@@ -249,6 +253,42 @@ footer .container div {
   }
   html {
     scroll-behavior: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  header .container .buttons .button {
+    font-size: 3vw;
+  }
+
+  footer .container {
+    flex-direction: column;
+    max-width: 100%;
+  }
+
+  footer .container div {
+    width: 100%;
+    flex: 1;
+  }
+
+  section {
+    max-width: 90%;
+  }
+
+  .card-container {
+    display: grid;
+    grid-template-columns: 100% !important;
+    /* needs important tag to overwrite inline styling */
+  }
+
+  .modal .content {
+    padding: 30px;
+    min-width: calc(85% - 30px);
+    max-width: calc(85% - 10px) !important;
+  }
+
+  .modal .content h2 {
+    font-size: large;
   }
 }
 
